# pca

Codigos/: README.md  build.sh  main.py  performance.py  pyproject.toml  soma_numeros.py
Codigos/241030_calc_fracoes/: fracao.py  main.py
Codigos/241106_file_manipulation/: file_manipulation.py
Codigos/Aula05/: main.py
Codigos/Aula06/: exercicio1.py  exercicio2.py  exercicio3.py  exercicio4.py  exercicio5.py
Codigos/tests/: test_geometry.py
